# bigdata-velox

./: CMakeLists.txt
.github/scripts/: setup-check.sh  setup-ubuntu.sh
.github/workflows/: build_and_test.yml  check.yml  update_doc.yml
scripts/: check.py  ci-setup-helper-functions.sh  ci-setup-ubuntu.sh  setup-check.sh  setup-ubuntu.sh  test.sh
velox/buffer/: StringViewBufferHolder.cpp
velox/codegen/: Codegen.cpp
velox/expression/type_calculation/: CMakeLists.txt
